# spackle

./: .gitignore  .goreleaser.yaml  CLAUDE.md  Cargo.toml  README.md  WASM.md  dist-workspace.toml  justfile  lefthook.yaml
.github/: dependabot.yaml
.github/workflows/: build-setup.txt  build-setup.yaml  build.yaml  ci.yaml  release.yaml  release.yml  snapshot.yaml
cli/: Cargo.toml
cli/src/: check.rs  fill.rs  info.rs  main.rs
cli/src/util/: mod.rs
crates/spackle-cli/: Cargo.toml
crates/spackle-cli/src/: check.rs  diagnostic.rs  fill.rs  main.rs
crates/spackle-wasm/: Cargo.toml
crates/spackle-wasm/src/: callback_fs.rs  lib.rs  memory_fs.rs
docs/: configuration.md
docs/design/: wasm.md
docs/ts/: api.md  custom-host.md  getting-started.md  hooks.md  runtime-targets.md
docs/wasm/: api.md  custom-host.md  getting-started.md  hooks.md  runtime-targets.md
docs/wasm/recipes/: browser-preview.md  nextjs.md  tanstack-start.md
examples/: README.md
examples/cli/: README.md
examples/ts/bun-script/: README.md  generate.ts  package.json
examples/wasm/browser-preview/: README.md
examples/wasm/bun-script/: README.md  generate.ts  package.json
examples/wasm/nextjs-route/: README.md
examples/wasm/node-script/: README.md
examples/wasm/tanstack-start-server/: README.md
frontend/: .gitignore  biome.json  bun.lockb  hono-entry.ts  package.json  server.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/components/: Link.tsx  Project.tsx  ProjectCard.tsx  Slot.tsx  SlotField.tsx
frontend/layouts/: HeadDefault.tsx  LayoutDefault.tsx
frontend/pages/: +config.ts
frontend/pages/_error/: +Page.tsx
frontend/pages/index/: +Page.tsx  +data.ts
frontend/pages/project/@id/: +Page.tsx  +data.ts  +title.ts
frontend/server/: config.ts  slots.server.ts  slots.ts  vike-handler.ts
frontend/testing/: server.json
my-new-project/: project_name
napi/: .gitignore  Cargo.toml  bun.lockb  index.linux-arm64-gnu.node  package.json
napi/npm/android-arm-eabi/: README.md  package.json
napi/npm/android-arm64/: README.md  package.json
napi/npm/darwin-arm64/: README.md  package.json
napi/npm/darwin-universal/: README.md  package.json
napi/npm/darwin-x64/: README.md  package.json
napi/npm/freebsd-x64/: README.md  package.json
napi/npm/linux-arm-gnueabihf/: README.md  package.json
napi/npm/linux-arm-musleabihf/: README.md  package.json
napi/npm/linux-arm64-gnu/: README.md  package.json
napi/npm/linux-arm64-musl/: README.md  package.json
napi/npm/linux-riscv64-gnu/: README.md  package.json
napi/npm/linux-x64-gnu/: README.md  package.json
napi/npm/linux-x64-musl/: README.md  package.json
napi/npm/win32-arm64-msvc/: README.md  package.json
napi/npm/win32-ia32-msvc/: README.md  package.json
napi/npm/win32-x64-msvc/: README.md  package.json
napi/src/: lib.rs
node-addon/: Cargo.toml  bun.lockb  import.js  package.json
node-addon/src/: lib.rs
poc/: README.md  index.ts  package.json
poc/scripts/: demo.ts
poc/src/: spackle.ts
poc/src/host/: disk-fs.ts  fs.ts  hooks.ts  memory-fs.ts  spackle-fs.ts
poc/src/wasip2/: bun-wasi.ts  bun.ts  index.ts
poc/src/wasm/: index.ts  types.ts
poc/tests/: disk-fs.test.ts  e2e.test.ts  host.test.ts  memory-fs.test.ts  spackle.test.ts  wasm.test.ts
poc/tests/wasip2/: bun-wasi-containment.test.ts  component.bun.test.ts  component.test.mjs  smoke-compile.ts
scripts/: build-wasm.sh
src/: api.rs  bindings.rs  check.rs  component.rs  config.rs  copy.rs  diagnostic.rs  fs.rs  hook.rs  hook_wasip2.rs  lib.rs  main.rs  needs.rs  render.rs  slot.rs  template.rs  wasm.rs  wasm_fs.rs  wasm_fs_kind.rs
src/cli/: main.rs
src/core/: config.rs  copy.rs  fill.rs  hook.rs  mod.rs  project.rs  slot.rs  template.rs  validate.rs
src/server/: config.rs  frontend.rs  main.rs
src/util/: copy.rs
tests/: config.rs  copy.rs  diagnostics.rs  fill.rs  hook.rs  single_file.rs  slot.rs  template.rs  templating.rs  validate.rs
tests/common/: mod.rs
tests/data/: single_file.j2t
tests/data/bad_default_slot_val/: spackle.toml  test.j2
tests/data/bad_template/: file.j2
tests/data/conf_dup_key/: spackle.toml
tests/data/default_slot_val/: spackle.toml
tests/data/dependent_hook/: spackle.toml
tests/data/hook/: spackle.toml
tests/data/hook_ran_cond/: spackle.toml
tests/data/hook_run_fail/: spackle.toml
tests/data/hook_slow/: spackle.toml
tests/data/invalid_hook_cmd/: spackle.toml
tests/data/needs/: spackle.toml
tests/data/proj1/: spackle.toml  {{file_name}}.R.j2  {{project_name}}  {{slot_1}}.j2
tests/data/proj1-out/: main.R  spackle.toml
tests/data/proj1-out/subdir/: test.json
tests/data/proj1/subdir/: bad.j2  file  test.json.j2
tests/data/proj2/: good.j2  spackle.toml
tests/data/proj3/: spackle.toml
tests/data/project_name/: {{_project_name}}.j2  {{project_name}}.j2
tests/data/server/: config1.toml
tests/data/templated/: file.j2  spackle.toml
tests/data/types/: spackle.toml
tests/data/universal/: {{_project_name}}.j2
tests/fixtures/bad_template/: bad.j2  spackle.toml
tests/fixtures/basic_project/: README.md.j2  spackle.toml
tests/fixtures/basic_project/docs/: static.md
tests/fixtures/basic_project/drafts/: ignored.md
tests/fixtures/hooks_fixture/: spackle.toml
tests/fixtures/typed_slots/: spackle.toml
tests/snapshots/: templating__basic_project_contents.snap  templating__basic_project_tree.snap
ts/: .oxfmtrc.json  .oxlintrc.json  README.md  lefthook.yaml  package.json  tsconfig.build.json  tsconfig.json
ts/scripts/: build.ts  demo.ts
ts/src/: index.ts  spackle.ts
ts/src/host/: disk-fs.ts  hooks.ts  memory-fs.ts
ts/src/wasm/: browser.ts  index.ts  runtime.ts  types.ts
ts/tests/: disk-fs.test.ts  hooks.test.ts  memory-fs.test.ts  spackle.test.ts  wasm-runtime.test.ts
wasm/: README.md  package.json
wasm/scripts/: build.ts
wasm/src/: index.ts
wasm/src/host/: disk-fs.ts  hooks.ts  memory-fs.ts
wasm/src/wasm/: types.ts
wasm/tests/: disk-fs.test.ts  memory-fs.test.ts  spackle.test.ts
wit/: spackle.wit
(+3 files in other folders)
