[package]
name = "spackle"
version = "0.4.3"
edition = "2021"
repository = "https://github.com/a2-ai/spackle"
description = "A frictionless project templating tool."

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["cli"]

[features]
default = []
# wasm-bindgen integration: enables `src/wasm.rs` + `src/wasm_fs.rs` and
# pulls in the JS-interop deps. Primary (and only) wasm path.
wasm = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:console_error_panic_hook",
]

[dependencies]
colored = "3.1.1"
fronma = { version = "0.2.0", features = ["toml"] }
serde = { version = "1.0.228", features = ["derive"] }
strum_macros = "0.28.0"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
# Used by `src/api.rs` (JSON-in/JSON-out helpers consumed by wasm.rs).
# Always compiled; tiny dep, not worth feature-gating.
serde_json = "1.0"
# wasm-bindgen integration (enabled by `wasm` feature). `js-sys` is the
# runtime dep used by `src/wasm_fs.rs` for the `JsFs` adapter bridge.
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Native-only — these require OS APIs that wasm32 doesn't have.
# `StdFs` (in src/fs.rs) and the CLI both depend on them.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-process = "2.5.0"
async-stream = "0.3.6"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
polyjuice = { git = "https://github.com/a2-ai/polyjuice", tag = "v0.1.0" }
tempdir = "0.3.7"
tera = "1.20.1"
tokio = { version = "1.52.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.18"
tracing-subscriber = "0.3.23"
users = "0.11.0"
walkdir = "2.5.0"

# wasm32-unknown-unknown (wasm-bindgen primary path).
# - Full tera (builtins on — matches native behavior).
# - getrandom 0.2 with `js` feature: tera → rand transitively needs a
#   random source, and on the unknown target only the JS shim works.
[target.'cfg(target_arch = "wasm32")'.dependencies]
tera = "1.20.1"
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
