[package]
name = "spackle"
version = "0.4.3"
edition = "2021"
repository = "https://github.com/a2-ai/spackle"
description = "A frictionless project templating tool."

[workspace]
members = ["cli"]

[dependencies]
async-process = "2.5.0"
async-stream = "0.3.6"
colored = "3.1.1"
fronma = { version = "0.2.0", features = ["toml"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
polyjuice = { git = "https://github.com/a2-ai/polyjuice", tag = "v0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
strum_macros = "0.28.0"
tera = { version = "2.0.0-alpha.3", features = ["glob_fs"] }
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
users = "0.11.0"
walkdir = "2.5.0"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }
tempfile = "3.14.0"
