[package]
name = "spackle-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spackle"
path = "src/main.rs"

[dependencies]
spackle = { path = "../" }
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
rocket = { version = "0.5.1", features = ["json"] }
rust-embed = "8.4.0"
tera = "1.20.0"
dialoguer = "0.11.0"
atty = "0.2.14"
